# mmwave-gesture-recognition

./: .gitignore  LICENSE  README.md  console.py  data.py  mmwave.py  model.keras  profile.cfg  pyproject.toml  requirements.txt  train.py  x_train.npy  y_train.npy
configs/: profile.cfg
docs/: awr1642boost-setup.md
models/: Conv2D.keras  LSTM.keras
profiles/: profile.cfg
src/: main.py
src/console/: cli.py
src/mmwave/: radar.py  uart.py
src/utils/: logger.py
